# ennikkai

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  _autolassi.py  appveyor.yml  build.py  package-lock.json  package.json  pyproject.toml  renovate.json  setup.py  தேவைகள்.txt
.github/workflows/: pypi.yml  tests-js.yml  tests-py.yml
ennikkai/: __init__.py  தகவல்கள்.json  மூலம்.py
ஆவணங்கள்/source/: conf.py  குறியீடு.rst
எண்ணிக்கை/: __init__.py  அடிமானம்.py  தகவல்கள்.json  முறைமைகள்.py  மூலம்.py  வாடிகையாளர்.js  வார்ப்புரு.py
எண்ணிக்கை/நீட்டிப்புகள்/: _.xml  __init__.py  கருவிகள்.py  பதினமம்.py  பதின்மம்_தகவல்கள்.json  மாயர்.py  மாயாப்.py
எண்ணிக்கை0/: __init__.py  அடிமானம்.py  இடஞ்சார்.py  தகவல்கள்.json  மத்திய.py  முறைமைகள்.py  வார்ப்புரு.py
சோதனைகள்/: .coveragerc  Test_ennikkai.py  __init__.py  mattam.js  பரிக்ஷை.py  மூலம்.py
பை/: .gitignore  .pdm-python  pyproject.toml
பை/எண்ணிக்கை/: __init__.py  அடிமானம்.py  முறைமைகள்.py
பை/சோதனைகள்/: .coveragerc  மூலம்.py  மூலம்_சோதி.py
பை/மூலம்/எண்ணிக்கை/: .gitignore  __init__.py  அடிமானம்.பை  இடஞ்சார்.py  தகவல்கள்.json  தகவல்கள்.py  பிழைகள்.py  பிழைகள்.பை  மத்திய.py  மாறிலிகள்.py  முறைமைகள்.py  முறைமைகள்.பை
பை/மூலம்/எண்ணிக்கை/தகவல்கள்/: இயல்புநிலை.py  தகவல்கள்.py  விண்மீன்_தகவல்கள்.py
பை/மூலம்/எண்ணிக்கை/புதுப்பிப்பி/: புதுப்பிப்பி.py  விண்மீன்_புதுப்பிப்பி.py
மூலம்/எண்ணிக்கை/: _.xml  __init__.பை  அடிமானம்.பை  இடஞ்சார்.py  இடஞ்சார்.பை  தகவல்கள்.ஜெஸான்  மத்திய.py  மத்திய.பை  முறைமைகள்.py  முறைமைகள்.பை  வார்ப்புரு.பை
யாகி/: .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
யாகி/மூலம்/: எண்ணிக்கை.ts  கிளி.ts  குறியீட்டு.ts  குறியீட்டு.சோதனை.ts  தகவல்கள்.json  தகவல்கள்.ஜெஸான்  பதிப்பு.ts  மாறிலிகள்.ts  வகைகள்.ts
வளங்கள்/: தகவல்கள்.json
