[tool.poetry]
name = "எண்ணிக்கை"
version = "1.2.5"
description = "எண் மொழிபெயர்ப்பு."
authors = ["JulienMalard <julien.malard@mail.mcgill.ca>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/julienmalard/ennikkai"
documentation = "https://ennikkai.readthedocs.io"
packages = [
    { include = 'எண்ணிக்கை', from = 'மூலம்' }
]

[tool.poetry.dependencies]
python = "^3.8"
nuchabal = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-subtests = "^0.3.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"

[tool.coverage.paths]
source = ["மூலம்"]

[tool.coverage.run]
branch = true
source = ["எண்ணிக்கை"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
