[tool.poetry]
name = "எண்ணிக்கை"
version = "1.2.5"
description = "எண் மொழிபெயர்ப்பு."
authors = ["JulienMalard <julien.malard@mail.mcgill.ca>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/julienmalard/ennikkai"
documentation = "https://ennikkai.readthedocs.io"
packages = [
    { include = 'எண்ணிக்கை', from = 'விநியோகம்' }
]

[tool.poetry.dependencies]
python = "^3.8"
nuchabal = "^0.0.1"
lassi = '0.1.5'

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-subtests = "^0.3.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"


[tool.lassi]
lang = "த"

[tool.pytest.ini_options]
addopts = "--cov=\"எண்ணிக்கை\" சோதனைகள்/மூலம்.py"

[tool.coverage.paths]
source = ["எண்ணிக்கை"]

[tool.coverage.run]
branch = true
source = ["எண்ணிக்கை"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
