[project]
name = "ennikkai"
version = "1.2.5"
description = "Client Python pour le réseau Constellation."
authors = [
    {name = "Julien Jean Malard-Adam", email = "julien.malard@mail.mcgill.ca"},
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "AGPL-3.0"}
repository = "https://github.com/julienmalard/ennikkai"
documentation = "https://ennikkai.readthedocs.io"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-trio>=0.8.0",
    "coverage>=7.3.3",
]

[tool.pdm.scripts]
test = "pdm run pytest சோதனைகள்/மூலம்.py"
cov = "pdm run coverage run -m pytest"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "coverage<8.0.0,>=7.2.7",
    "lassi>=0.1.7",
]
test = [
    "pytest>=7.4.3",
    "pytest-trio>=0.8.0",
    "coverage>=7.3.3",
]
