[project]
name = "ennikkai"
version = "1.2.6"
description = "Client Python pour le réseau Constellation."
authors = [
    {name = "Julien Jean Malard-Adam", email = "julien.malard@mail.mcgill.ca"},
]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = {text = "AGPL-3.0"}
repository = "https://github.com/julienmalard/ennikkai"
documentation = "https://ennikkai.readthedocs.io"
dependencies = ["nuchabal>=0.1.3"]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
sutham = "rm -r -f மூலம்/எண்ணிக்கை/வளங்கள்"
nagal = "cp -R ../வளங்கள் மூலம்/எண்ணிக்கை"
togupu = { composite = ["sutham", "nagal"] }
test = "pdm run pytest"
cov = "pdm run coverage run -m pytest"

[tool.pytest.ini_options]
python_files = "*_சோதி.py"
python_classes = "சோதி"
python_functions = "*_சோதி"

[tool.pdm.build]
package-dir = "மூலம்"
includes = ["மூலம்/எண்ணிக்கை"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "coverage<8.0.0,>=7.2.7",
]
test = [
    "pytest>=7.4.3",
    "pytest-trio>=0.8.0",
    "coverage>=7.3.3",
]
